loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:3: error: illegal start of simple expression
}while (rossing()== false=) 
                          ^Poucet2:5: error: ')' expected but '}' found.
	}
        ^